--- a/18.Database/NeDB/package.json
+++ b/18.Database/NeDB/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nedb-promise": "^2.0.1"
+    "nedb-promise": "^2.0.1",
+    "nodemon": "^2.0.16"
   }
 }
